// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> with \`digits\` prop matches with snapshot 1`] = `
<input
  className="text-input__StyledInput-sc-11wej6v-1 fMDXso"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`disabled\` prop matches with snapshot 1`] = `
<input
  className="text-input__StyledInput-sc-11wej6v-1 eIDyGn"
  disabled={true}
  name="text"
/>
`;

exports[`<TextInput /> with \`error\` prop matches with snapshot 1`] = `
<input
  className="text-input__StyledInput-sc-11wej6v-1 ildLBg"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`name\` prop matches with snapshot 1`] = `
<input
  className="text-input__StyledInput-sc-11wej6v-1 eIDyGn"
  disabled={false}
  name="foobar"
/>
`;

exports[`<TextInput /> with \`tag\` prop matches with snapshot 1`] = `
<input
  className="text-input__StyledInput-sc-11wej6v-1 eIDyGn"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`tiny\` prop matches with snapshot 1`] = `
<input
  className="text-input__StyledInput-sc-11wej6v-1 crQkbU"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`valid\` prop matches with snapshot 1`] = `
<input
  className="text-input__StyledInput-sc-11wej6v-1 hkFqJt"
  disabled={false}
  name="text"
/>
`;
